# mimir

./: .gitattributes  .gitignore  .gitmodules  .last_build_id  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Privacy Policy.md  README.md  Terms of use.md  analysis_options.yaml  flutter_bootstrap.js  flutter_service_worker.js  index.html  l10n.yaml  manifest.json  package-lock.json  package.json  pubspec.yaml  run_build_runner.sh  version.json
.github/: dependabot.yml
android/: build.gradle  gradle.properties  settings.gradle
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES  room_list.json  roomlist.json  user_agent.json  yellow_pages.json
build-tools/: addBuildNumber.py  toDistribution.py
ios/: ExportOptions.plist  Podfile
ios-build-tools/: addBuildNumber.py  toDistribution.py
l10n/: app_en.arb  app_zh.arb  app_zh_TW.arb
lib/: app.dart  entities.dart  files.dart  index.dart  init.dart  launcher.dart  lifecycle.dart  main.dart  mimir_plugins.dart  mini_app.dart  objectbox-model.json  objectbox.g.dart  r.dart  route.dart  test.dart  version.dart
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
specifications/: ABBREVIATION.md  CONTRIBUTION_GUIDE.md  I18N_PROTOCOL.md  STRUCTURE.MD  TERM.md
test/: app_feature_test.dart  (+15 more)
tool/tui/: LICENSE  README.md  filesystem.py  multiplatform.py  pyproject.toml  setup.py  test.py  timer.py
tool/tui/colortxt/: __init__.py  colors.py  txt.py
tool/tui/input/: __init__.py
tool/tui/keys/: keys.py
tool/tui/render/: __init__.py  canvas.py  unix.py  win.py
(+2014 files in other folders)
