[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytuix"
version = "0.0.1"
authors = [
  { name="Liplum", email="Li_plum@outlook.com" },
]
description = "Text user interface in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/liplum/pytui"
"Bug Tracker" = "https://github.com/liplum/pytui/issues"